@@ -313,10 +313,7 @@ fatal (const gmk_floc *flocp, const char *fmt, ...)
 {
   va_list args;
 
-  if (output_sync)
-    log_working_directory (1, 1);
-  else
-    log_working_directory (1, 0);
+  log_working_directory (1, 0);
 
   if (flocp && flocp->filenm)
     fprintf (stderr, "%s:%lu: *** ", flocp->filenm, flocp->lineno);
@@ -331,8 +328,7 @@ fatal (const gmk_floc *flocp, const char *fmt, ...)
 
   fputs (_(".  Stop.\n"), stderr);
 
-  if (output_sync)
-    log_working_directory (0, 1);
+  log_working_directory (0, 1);
 
   die (2);
 }
