@@ -1,3 +1,8 @@
+2013-05-13  Paul Smith  <psmith@gnu.org>
+
+	* scripts/features/output-sync (output_sync_set): Update for new
+	--trace behavior.
+
 2013-05-05  Paul Smith  <psmith@gnu.org>
 
 	* scripts/features/output-sync (output_sync_set): Remove
